          connectors.
        - Fixed issue with character sets and proxies where a character
          set could be written twice in HTTP headers. Reported by Alex
          Milowski.
        - The Router.defaultMatchQuery property wasn't properly taken
          into account by the Route class. Now it sets the default 
          value for Route.matchQuery property.
    - API Enhancements
        - Added a "Request.originalRef" property containing the URI 
          reference originally requested by the client. Clarified the
          purpose of "Request.resourceRef". Suggested by Alex Milowski
          and Rob Heittman.
        - Client now has a new constructor taking a string with the 
       	  protocol name instead of a Protocol instance.
       	- Replaced "Response.challengeRequest" by "challengeRequests" 
       	  list property to conform to HTTP semantics. Contributed by
       	  Bruno Harbulot.
       	- Clarified concurrency constraints on Uniform/Restlet 
       	  subclasses and on Resource class. 
       	  Suggested by Bruno Harbulot.
       	- Added public Resource#getAllowedMethods() method.
       	- Allow the routing of URIs with or without taking into 
       	  account the query part. Suggested by Jim Alateras and 
       	  contributed by Bruno Dumon.
       	- Completed the Component's XML config with the default query 
       	  match setting defined on routers. Suggested by Bruno Dumon.
       	- Replaced the Context#getThread(Runnable) method with a more
       	  flexible org.restlet.service.TaskService class and a new
       	  "taskService" property on Application. Many design 
       	  contributions from Tim Peierls. Suggestions by Kevin Conaway.
       	- Clarified Javadocs for static getCurrent() methods. Suggested
       	  by Patrick Logan.
       	- Replaced Map<String, Object> parameters by Map<String, ?>
       	  in Template and Resolver classed. Suggested by Leigh Klotz.